# mute-unmute-poc

./: Cargo.toml  Makefile  README.md
demo-server/src/: main.rs
demo/js/: index.js
proto/: Cargo.toml
proto/src/: lib.rs
reactivity/: Cargo.toml
reactivity/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: event_listener.rs  lib.rs  proto.rs  ws.rs
tests/: mute_unmute.rs
web/: index.html  package.json  webpack.config.js
web/js/: index.js
