[package]
name = "mute-unmute-poc"
version = "0.1.0"
authors = ["Semen Evdokimov <evdokimovs@protonmail.ch>"]
edition = "2018"

[workspace]
members = [
  "server",
  "proto"
]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
futures = "0.3"
mute-unmute-poc-proto = { path = "proto" }
console_error_panic_hook = "0.1"
[dependencies.web-sys]
    version = "0.3"
    features = [
        "console",
        "EventTarget",
        "MessageEvent",
        "WebSocket", "Window",
    ]
