[package]
name = "reactivity"
version = "0.1.0"
authors = ["Semen Evdokimov <evdokimovs@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["macros", "test-util"] }
futures-signals = "0.3"

[dev-dependencies]
tokio-test = "0.2"
criterion = "0.3"