[package]
name = "mute-unmute-poc-server"
version = "0.1.0"
authors = ["Semen Evdokimov <evdokimovs@protonmail.ch>"]
edition = "2018"

[dependencies]
actix = "0.8"
actix-web = "1.0"
actix-web-actors = "1.0"
futures = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mute-unmute-poc-proto = { path = "../proto" }
